name:                ns-webappt
version:             0.2.0.1
synopsis:            WebApp monad transformer
description:         Please see README.md
homepage:            https://dpetrovmabius@bitbucket.org/cyl_analytics/ns-webappt.git#readme
license:             BSD3
license-file:        LICENSE
author:              Author name dpetrov
maintainer:          dpetrov@cyl.me
copyright:           2016 Author name dpetrov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NSWebApp.Monad.Trans
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , logging-effect
                     , mtl
                     , transformers >= 0.4.2.0
