name:                ns-webappt
version:             1.0.0.0
synopsis:            WebApp monad transformer
description:         Please see README.md
homepage:            https://github.com/NewSquareRU/ns-webappt.git
license:             BSD3
license-file:        LICENSE
author:              Author name dpetrov
maintainer:          dpetrov@cyl.me
copyright:           2016 Author name dpetrov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Trans.NSWebApp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , logging-effect
                     , monad-control >= 1.0
                     , mtl
                     , transformers >= 0.4.2.0
                     , transformers-base >= 0.4
